--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div id="blurb">
                         <div class="cover-letter">
                             <h3>Meet Dave</h3>
-                            <p>Hi, I’m Dave. I try to do my part to make the web a better place. And I specialize in helping people and businesses succeed by putting WordPress to work for specific needs (it can do a lot). I pride myself on keeping up with the latest web standards and giving my clients the very best the web has to offer their business or personality.  And I love what I do.</p>
+                            <p>Hi, I’m Mike. I try to do my part to make the web a better place. And I specialize in helping people and businesses succeed by putting WordPress to work for specific needs (it can do a lot). I pride myself on keeping up with the latest web standards and giving my clients the very best the web has to offer their business or personality.  And I love what I do.</p>
                             <br />
                             <p>You may be wondering about the name. Dauidus is the possessive form of my name – David’s – in ancient Koine Greek (yup, I’m a special sort of geek). Some folks have called me that since the college years, and it just stuck (yup, they know I’m a special sort of geek). I pronounce it *dah – wee – doos*, but I’ve heard it said many interesting ways. And, I’m really OK with all of them. You have to be when your name is Dauidus.</p>
                             <br />
